--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -6,47 +6,47 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/textView1"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:text="Local" />
 
         <Spinner
             android:id="@+id/locale_area_spinner"
             android:layout_width="180dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="60dp" />
 
         <Button
             android:id="@+id/locale_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="86dp"
+            android:layout_height="60dp"
             android:text="OK" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
+            android:id="@+id/textView2"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:text="Remote" />
 
         <Spinner
             android:id="@+id/remote_area_spinner"
             android:layout_width="180dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="60dp"/>
 
         <Button
             android:id="@+id/remote_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="86dp"
+            android:layout_height="60dp"            
             android:text="Download" />
     </LinearLayout>
 
